--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "malonebox",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A simple and fast jQuery lightbox alternative.",
   "author": "Flize Team <welcome@flize.com.br>",
   "homepage": "http://flize.com.br",
@@ -29,6 +29,7 @@
     "lightbox",
     "modal",
     "gallery",
-    "image"
+    "image",
+    "overlay"
   ]
 }
